# nornir_netbox

./: CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
docs/: custom.css  index.md  usage.md
nornir_netbox/inventory/: __init__.py
nornir_netbox/plugins/inventory/: __init__.py  netbox.py
tests/: test_netbox.py
tests/NBInventory/: expected.json
tests/NBInventory/2.3.5/: expected.json
tests/NBInventory/2.8.9/: expected.json
tests/NetBoxInventory2/: expected.json
tests/NetBoxInventory2/2.3.5/: expected-defaults-group.json  expected-defaults.json  expected-group.json  expected.json
tests/NetBoxInventory2/2.8.9/: expected-defaults-group.json  expected-defaults.json  expected-group.json  expected.json  expected_platform_slug.json  expected_use_napalm.json  expected_use_platform_napalm_driver.json  expected_use_platform_slug.json  expected_vms.json  expected_vms_platform_slug.json  vms-expected.json  vms-expected_use_platform_slug.json
tests/data/: defaults.yaml  groups.yaml
tests/inventory_data/: hosts.yaml
tests/mocked/2.3.5/: devices-0.json  devices-2.json  devices.json  platforms.json
tests/mocked/2.8.9/: devices-0.json  devices-1.json  devices-2.json  devices.json  platforms.json  virtual-machines-0.json  virtual-machines-1.json  virtual-machines-2.json  virtual-machines.json
tests/unit/: test_netbox.py
