[tool.poetry]
name = "nornir_netbox"
version = "0.1.0"
description = "Netbox plugin for Nornir"
authors = ["Wim Van Deun <7521270+enzzzy@users.noreply.github.com>", "Clay584"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
nornir = { git = "https://github.com/nornir-automation/nornir/", branch = "3.0.0-entrypoints" }

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
mypy = "*"
pylama = "^7.7.1"
pytest = "*"
pytest-coverage = "^0.0"
requests_mock = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
